--- a/web-app/public/index.html
+++ b/web-app/public/index.html
@@ -20,6 +20,7 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div id="notify"></div>
+  <div id="confirm"></div>
 </body>
 
 </html>
